# AMDEN-code

./: README.md
datasets/MEG/data/: MEG.extxyz
datasets/MEG/src/: bmp.py  main.py
datasets/MEG/workflow/: main_parse.py  workflow.sh
datasets/MEG/workflow/flake/: flake.nix
datasets/MEG/workflow/lammps-scripts/: evap.lammps  melt.lammps  quench.lammps  thermal-expansion.lammps
datasets/MEG/workflow/src/: bmp.py  convert.py  lmpio.py  main_check_melted.py  main_check_no_evap.py  main_elastic.py  main_evap.py  main_init.py  main_parse.py  main_thermal_expansion.py
datasets/Si/data/: Si-anneal.extxyz  Si-melt.extxyz  Si-quench.extxyz
datasets/Si/src/: main.py
datasets/Si/src/lib/: rdf.py
datasets/SiO2/data/: SiO2.extxyz
datasets/SiO2/src/: main.py  rings.py  tersoff.py
datasets/flake/: flake.nix
datasets/flake/tersoff/: default.nix
runtime/: Dockerfile  ddm.def  init.sh  requirements.txt
runtime/flake/: flake.nix  test-torch-compile.py
runtime/poetry/: DiffDisMatter.def  flake.nix  pyproject.toml
settings/a-si/anneal/: infer.yaml  train.yaml
settings/a-si/melt/: train.yaml
settings/a-sio2/E/: infer.yaml  train.yaml
settings/meg/deriv-E/: infer.yaml  train.yaml
settings/meg/egnn-E/: infer.yaml  train.yaml
settings/meg/egnn-E_Li/: infer.yaml  train.yaml
src/: data.py  main.py  neighborlists.py  pipeline.py  utils.py
src/models/: embeddings.py  layers.py
src/models/denoisers/: base.py  egnn.py  egnn_deriv.py
src/models/modules/: bmp.py  losses.py  material_schedule.py  noise_schedules.py
src/models/networks/: egnn.py
(+1 files in other folders)
